--- a/index.html
+++ b/index.html
@@ -146,6 +146,26 @@
 
     </main>
     <footer>
+        <div class="column">
+            <h3 class="section-title">Let's Connect</h3>
+            <p class="text">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="img"><img src="images/icons/facebook.png" alt=""><img src="images/icons/twitter.png" alt=""><img src="images/icons/insta.png" alt=""></div>
+        </div>
+       <div class="column">
+            <h3 class="section-title">Let's Message Me</h3>
+            <form class="msg me">
+                <label for="name">
+                    <input id="name" type="text" placeholder=" Your name">
+                </label><br><br>
+                <label for="email">
+                    <input id="email" type="email" placeholder=" Your email">
+                </label><br><br>
+                <label for="Message">
+                    <textarea name="" id="Message" cols="30" rows="10" placeholder="Message"></textarea><br><br>
+                    <button class="btn-primary" type="submit">Submit</button>
+                </label>
+            </form>
+        </div>
         
     </footer>
     
