--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,800;1,300;1,400;1,800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/portfolio.css">
-
+    <script src="https://kit.fontawesome.com/f056a62cc9.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -26,8 +26,8 @@
         <h3 class="banner-greeting"> Hi, I  am</h3>
         <h1 class="banner-title">Mary Hardy</h1>
         <p class="banner-para">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-        <button class="btn-primary">Download CV</button>
-        <button class="btn">Contact</button>
+        <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+        <button class="btn"></i><i class="fa-solid fa-phone"> </i> Contact</button>
 
     </div>
     <img class="profile-pic" src="images/hardy.png" alt="">
@@ -140,7 +140,7 @@
             </div>
         </div> 
            <div class="download-cv">
-            <button class="btn-primary DC">Download CV</button>
+            <button class="btn-primary DC"><i class="fa-solid fa-download"></i> Download CV</button>
            </div>
         </section>
 
